--- a/GestionAsistencia/Views/Shared/_AllFichasClass.cshtml
+++ b/GestionAsistencia/Views/Shared/_AllFichasClass.cshtml
@@ -1,7 +1,12 @@
 ﻿<div class="row">
     <div class="col-md-6 form-group">
         <label class="control-label"> Ficha </label>
-        <select class="form-control" id="cmbAllFichas" onchange="selectAllFicha()" required>
+        <select 
+        class="form-control" 
+        id="cmbAllFichas"
+        onchange="selectAllFicha()"
+        style="width: 100%;"
+        required>
             <option> Selecciona una Ficha</option>
             @*<option data-toggle="tooltip" data-placement="top" title="Tooltip on top"> Seleccionar Ficha</option>*@
         </select>
@@ -47,17 +52,7 @@
         });
     }
 
-    function loadAllFichas(data, selected) {
-        $("#cmbAllFichas").empty();
-        $("#cmbAllFichas").append('<option value="" disabled selected>Seleccione una Ficha</option>');
-        $.each(data, function (i, lista) {
-            if (data[i].idFicha == selected) {
-                $("#cmbAllFichas").append('<option style="cursor:pointer;"  data-toggle="tooltip" data-placement="top" title="' + data[i].name + '" value="' + data[i].idFicha + '"selected>' + data[i].numFicha + '</option>');
-            }else {
-                $("#cmbAllFichas").append('<option style="cursor:pointer;"  data-toggle="tooltip" data-placement="top" title="' + data[i].name + '" value="' + data[i].idFicha + '">' + data[i].numFicha + '</option>');
-            }
-        });
-    }
+    
 
     function selectAllFicha(){
         var combo=document.getElementById("cmbAllFichas");
@@ -69,17 +64,7 @@
         loadAllClass(listAllClass);
     }
 
-    function loadAllClass(data, selected) {
-        $("#cmbAllClass").empty();
-        $("#cmbAllClass").append('<option value="" disabled selected>Seleccionar Clase</option>');
-        $.each(data, function (i, lista) {
-            if (data[i].idClass == selected) {
-                $("#cmbAllClass").append('<option  value="' + data[i].idClass + '"selected>' + data[i].class + '</option>');
-            }else {
-                $("#cmbAllClass").append('<option value="' + data[i].idClass + '">' + data[i].class + '</option>');
-            }
-        });
-    }
+  
 
     function selectAllClass(){
         var combo=document.getElementById("cmbAllClass");
