--- a/GestionAsistencia/Views/Shared/_Layout.cshtml
+++ b/GestionAsistencia/Views/Shared/_Layout.cshtml
@@ -468,7 +468,7 @@
 
     function multiSelectLetras()
     {
-        //Para que el multi select solo permita letras
+        //Para que el multi select solo permita números
         $(".select2-search__field").keypress(function(event){
             return soloNumeros(event);
         });
